--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -13,7 +13,7 @@
   src: url('../fonts/Quicksand-Medium.woff2') format('woff2'),
        url('../fonts/Quicksand-Medium.woff') format('woff'),
        url('../fonts/Quicksand-Medium.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
@@ -23,7 +23,17 @@
   src: url('../fonts/Quicksand-Bold.woff2') format('woff2'),
        url('../fonts/Quicksand-Bold.woff') format('woff'),
        url('../fonts/Quicksand-Bold.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Linearicons-Free';
+  src: url('../fonts/Linearicons-Free.woff2') format('woff2'),
+       url('../fonts/Linearicons-Free.woff') format('woff'),
+       url('../fonts/Linearicons-Free.ttf') format('truetype'),
+       url('../fonts/Linearicons-Free.svg') format('svg');
+  font-display: swap;
+}
+
