--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -10,11 +10,13 @@ html {
 
 a {
   text-decoration: none;
+  font-family: 'Quicksand-Regular', sans-serif;
 }
 
 body {
   font-size: 16px;
   color: $grey;
+  font-family: 'Quicksand-Regular', sans-serif;
 }
 
 .container {
