--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'global';
 @import 'fonts';
 
+// start header
 
 .header__top {
   background-color: #eef1f3;
@@ -240,7 +241,22 @@
     box-shadow: inset 0px 7px 5px 0px rgba(19, 19, 97, 0.62);
     transition: all .5s;
   }
+  &::after {
+    position: absolute;
+    content: '';
+    background-image: url(../images/icons/search.svg);
+    width: 16px;
+    height: 16px;
+    bottom: 14px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+  }
 }
+
+// end header
+
+// start search
 
 .search {
   background-color: #2448cb;
@@ -404,10 +420,50 @@
   }
 }
 
+// end search
 
-
+// start features
 
 .features {
   height: 500px;
 
+}
+
+// end features
+
+.features__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 186px;
+}
+
+.features__item {
+  text-align: center;
+  max-width: 363px;
+  padding: 46px 33px 47px;
+  transition: all .5s;
+  &:hover {
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+  }
+
+  &--middle {
+    padding-top: 39px;
+  }
+
+  &--right {
+    padding-top: 45px;
+  }
+
+}
+.features__title {
+  font-size: 24px;
+  color: #000;
+  margin-top: 36px;
+  margin-bottom: 20px;
+  font-family: 'Quicksand-Medium', sans-serif;
+}
+
+.features__text {
+  line-height: 30px;
+  font-family: 'Quicksand-Medium', sans-serif;
 }
