--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -442,8 +442,11 @@
   max-width: 363px;
   padding: 46px 33px 47px;
   transition: all .5s;
+  font-family: 'Quicksand-Medium', sans-serif;
+  transition: all .5s;
   &:hover {
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+    transition: all .5s;
   }
 
   &--middle {
@@ -455,15 +458,171 @@
   }
 
 }
+
 .features__title {
   font-size: 24px;
   color: #000;
   margin-top: 36px;
   margin-bottom: 20px;
-  font-family: 'Quicksand-Medium', sans-serif;
 }
 
 .features__text {
   line-height: 30px;
+}
+
+.products-slider {
+  background-color: #eff1f5;
+  padding: 120px 0;
+}
+
+.products-slider__top {
+  background-color: #fff;
+  padding: 34px 29px;
+  border-radius: 4px;
+  margin-bottom: 50px;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+}
+
+.products-slider__title {
+  font-size: 30px;
+  color: #000;
   font-family: 'Quicksand-Medium', sans-serif;
 }
+
+.products-slider__item {
+  display: flex;
+  justify-content: space-between;
+  box-shadow: 0px 2px 30px 0px rgba(147, 155, 168, 0.1);
+}
+
+.products-slider__content {
+  padding: 49px 50px 24px;
+  background-color: #fff;
+  & span {
+    display: inline-block;
+  }
+}
+
+.products-slider__heading {
+  font-size: 24px;
+  color: #000;
+  margin-bottom: 14px;
+  font-weight: 700;
+}
+
+.products-slider__info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.products-slider__avatar {
+  border-radius: 50%;
+  margin-right: 7px;
+}
+
+.products-slider__name {
+  color: #000;
+  margin-right: 25px;
+}
+
+.products-slider__category {
+  position: relative;
+  padding-left: 24px;
+  color: $purple;
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    background-image: url(../images/icons/wordpress.svg);
+  }
+}
+
+.products-slider__text {
+  font-weight: bold;
+  line-height: 30px;
+  margin-bottom: 35px;
+}
+
+.products-slider__feedback {
+  display: flex;
+  justify-content: space-between;
+}
+
+.products-slider__types a + a {
+  margin-left: 7px;
+}
+
+.products-slider__type {
+  display: inline-block;
+  font-size: 15px;
+  color: #868c96;
+  background-color: #f1f3f6;
+  padding: 7px 17px;
+  border-radius: 20px;
+  margin-bottom: 44px;
+}
+
+.products-slider__feedback {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-top: 1px solid #ececec;
+  padding: 24px 0;
+}
+
+.products-slider__price {
+  font-size: 15px;
+  font-family: 'Quicksand-Medium', sans-serif;
+  color: #fff;
+  padding: 9px 25px 9px 20px;
+  margin-right: 19px;
+  background: $blue;
+  border-radius: 40px;
+}
+
+.products-slider__likes {
+  position: relative;
+  font-size: 15px;
+  font-weight: 700;
+  padding-left: 26px;
+  margin-right: 19px;
+  color: $grey;
+  &::before {
+    position: absolute;
+    content: '';
+    top: -2px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/icons/like.svg);
+    background-repeat: no-repeat;
+  }
+}
+
+.products-slider__number {
+  position: relative;
+  padding-left: 23px;
+  margin-right: 170px;
+  font-size: 15px;
+  font-weight: 700;
+  color: $blue;
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/icons/cart.svg);
+    background-repeat: no-repeat;
+  }
+}
+
+
+
