--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,11 +13,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 0;
+  padding: 24px 0;
 }
 
 .header__logo-link {
   margin-left: 7px;
+  margin-right: 367px;
   &:focus {
     outline: transparent;
     box-shadow: 0px 0px 0px 5px rgb(138, 191, 235);
@@ -30,11 +31,13 @@
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
   font-family: 'Quicksand-Regular', sans-serif;
   font-size: 14px;
+  max-width: 140px;
+  height: 36px;
+  width: 100%;
   color: #fff;
   border: 3px solid transparent;
   border-radius: 50px;
-  padding: 7px 16px;
-  margin: 0 7px 5px 365px;
+  margin: 7px 35px 5px 0;
   cursor: pointer;
   transition: all .5s;
   &:hover {
@@ -136,6 +139,47 @@
   }
 }
 
+.header__icons div + div {
+  margin-left: 30px;
+}
+
+.header__icon {
+  display: inline-block;
+}
+
+.header__icon-link {
+  &::before {
+    content: '\e858';
+    font-family: 'Linearicons-Free';
+    font-size: 20px;
+    color: #7e8fa1;
+    transition: all .5s;
+  }
+
+  &--middle::before {
+    content: '\e818'; 
+  }
+
+  &--right::before {
+    content: '\e82e';
+  }
+
+  &:hover::before {
+    color: $blue;
+    transition: all .5s;
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0px 0px 0px 5px rgb(138, 191, 235);
+  }
+
+  &:active::before {
+    color: #132d8f;
+    transition: all .5s;
+  }
+}
+
 .header__bottom-inner {
   display: flex;
   justify-content: space-between;
@@ -228,6 +272,7 @@
   background-color: $blue;
   font-size: 0;
   cursor: pointer;
+  
   &:hover {
     background-color: rgb(39, 99, 160);
     transition: all .5s;
@@ -243,14 +288,13 @@
   }
   &::after {
     position: absolute;
-    content: '';
-    background-image: url(../images/icons/search.svg);
-    width: 16px;
-    height: 16px;
+    content: '\e86f';
+    font-family: 'Linearicons-Free';
+    color: #fff;
+    font-size: 15px;
     bottom: 14px;
     right: 0;
     left: 0;
-    margin: 0 auto;
   }
 }
 
@@ -312,15 +356,22 @@
 }
 
 .search__form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   z-index: 1;
   bottom: -300px;
   left: 0;
-  padding: 40px;
+  max-width: 1142px;
+  height: 135px;
+  width: 100%;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.08);
   color: #676767;
+  margin-right: auto;
+
   &::before,
   &::after {
     content: '';
@@ -331,7 +382,9 @@
     margin: 0 auto;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
   }
+
   &::before {
     top: -13px;
     width: 1112px;
@@ -345,64 +398,62 @@
   }
 }
 
-.search__form-inner {
-  position: relative;
-  border: 1px solid #dcdcdc;
-  border-radius: 5px;
-  display: inline-block;
-  margin-right: 25px;
-  // &:hover {
-  //   box-shadow: 0px 4px 4px rgba(23, 13, 116, 0.15);
-  //   transition: all .5s;
-  // }
-
-  // &:focus {
-  //   outline: transparent;
-  //   border: 1px solid #365fe6;
-  // }
-
-  // &:active {'
-  //   color: #3058df;
-  //   transition: all .5s;
-  //   text-shadow: none;
-  // }
-}
-
 .search__search {
-  width: 608px;
-  border: none;
-  padding: 0 27px;
-  &:focus::placeholder {
-    color:#365fe6;
+  max-width: 613px;
+  height: 55px;
+  width: 100%;
+  padding: 0 29px;
+  border: 1px solid #dcdcdc;
+  border-radius: 5px 0 0 5px;
+  border-right: none;
+
+  &:focus {
+    outline: transparent;
+    border-color: #1338c1;
+    border-right: 1px solid #1338c1;
+  }
+
+  &:active {
+    color: #1338c1;
   }
 }
 
 .search__options {
   position: relative;
-  width: 193px;
-  border: none;
-  border-left: 1px solid #dcdcdc;
-  padding: 17px 18px;
+  max-width: 195px;
+  width: 100%;
+  height: 55px;
   color: $grey;
   cursor: pointer;
   appearance: none;
-  background-image: url(../images/icons/down-arrow.svg);
-  background-repeat: no-repeat;
-  background-position: 90%;
+  margin-left: 0px;
+  margin-right: 30px;
+  border-radius: 0 5px 5px 0;
+  border: 1px solid #dcdcdc;
+  padding-left: 20px;
+  font-family: 'Quicksand-Medium';
+
+  &:focus {
+    outline: transparent;
+    border-color: #1338c1;
+    border-right: 1px solid #1338c1;
+  }
+
+  &:active {
+    color: #1338c1;
+  }
 }
 
 .search__search-btn {
-  width: 22px;
+  max-width: 225px;
   height: 55px;
+  width: 100%;
   background-color: $blue;
   border: none;
   color: #fff;
-}
-
-.search__search-btn {
-  width: 223px;
   border-radius: 5px;
   cursor: pointer;
+
   &:hover {
     background-color: rgb(39, 99, 160);
     transition: all .5s;
@@ -429,8 +480,6 @@
 
 }
 
-// end features
-
 .features__inner {
   display: flex;
   justify-content: space-between;
@@ -444,6 +493,7 @@
   transition: all .5s;
   font-family: 'Quicksand-Medium', sans-serif;
   transition: all .5s;
+  
   &:hover {
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
     transition: all .5s;
@@ -470,12 +520,19 @@
   line-height: 30px;
 }
 
+// end features
+
+// start products-slider
+
 .products-slider {
   background-color: #eff1f5;
   padding: 120px 0;
 }
 
 .products-slider__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #fff;
   padding: 34px 29px;
   border-radius: 4px;
@@ -489,15 +546,74 @@
   font-family: 'Quicksand-Medium', sans-serif;
 }
 
+.products-slider__btn {
+  width: 110px;
+  height: 45px;
+  background-color: $purple;
+  border: none;
+  border-radius: 40px;
+}
+
+.slick-arrow {
+  font-family: 'Linearicons-Free';
+  transition: all .5s;
+
+  &:hover {
+    font-weight: 700;
+    transition: all .5s;
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0px 0px 0px 2px rgb(138, 191, 235);
+    transition: all .5s;
+  }
+
+  &:active {
+    color: $blue;
+    transition: all .5s;
+  }
+}
+
+.lnr-chevron-left,
+.lnr-chevron-right {
+  position: absolute;
+  z-index: 1;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  top: -116px;
+  cursor: pointer;
+  outline: transparent;
+  font-size: 14px;
+}
+
+.lnr-chevron-left {
+  right: 97px;
+}
+
+.lnr-chevron-right {
+  right: 42px;
+}
+
 .products-slider__item {
-  display: flex;
-  justify-content: space-between;
   box-shadow: 0px 2px 30px 0px rgba(147, 155, 168, 0.1);
 }
 
+.products-slider__wrapper {
+  position: relative;
+}
+
 .products-slider__content {
+  position: absolute;
+  z-index: 5;
+  bottom: 0;
+  right: 0;
   padding: 49px 50px 24px;
   background-color: #fff;
+  max-width: 587px;
+  height: 450px;
+
   & span {
     display: inline-block;
   }
@@ -532,6 +648,7 @@
   position: relative;
   padding-left: 24px;
   color: $purple;
+
   &::before {
     position: absolute;
     content: '';
@@ -566,6 +683,13 @@
   padding: 7px 17px;
   border-radius: 20px;
   margin-bottom: 44px;
+  transition: all .5s;
+
+  &:hover {
+    background-color: #b3b4b6;
+    color: #fff;
+    transition: all .5s;
+  }
 }
 
 .products-slider__feedback {
@@ -577,10 +701,15 @@
 }
 
 .products-slider__price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 32px;
+  width: 100%;
   font-size: 15px;
   font-family: 'Quicksand-Medium', sans-serif;
   color: #fff;
-  padding: 9px 25px 9px 20px;
   margin-right: 19px;
   background: $blue;
   border-radius: 40px;
@@ -593,15 +722,15 @@
   padding-left: 26px;
   margin-right: 19px;
   color: $grey;
+
   &::before {
     position: absolute;
-    content: '';
+    content: '\e813';
     top: -2px;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    background-image: url(../images/icons/like.svg);
-    background-repeat: no-repeat;
+    left: 2px;
+    font-size: 15px;
+    color: $purple;
+    font-family: 'Linearicons-Free';
   }
 }
 
@@ -612,17 +741,25 @@
   font-size: 15px;
   font-weight: 700;
   color: $blue;
+
   &::before {
     position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    background-image: url(../images/icons/cart.svg);
-    background-repeat: no-repeat;
+    content: '\e82e';
+    top: -2px;
+    left: 2px;
+    font-size: 15px;
+    color: $blue;
+    font-family: 'Linearicons-Free';
   }
 }
+
+.rate-star .jq-ry-normal-group svg {
+  stroke:#ffc000;
+  stroke-width: 10;
+
+}
+
+// end products-slider
 
 
 
