--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -619,13 +619,15 @@
 	content: "\e8a9";
 }
 
+
+
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?h5dgw1');
-  src:  url('fonts/icomoon.eot?h5dgw1#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?h5dgw1') format('truetype'),
-    url('../fonts/icomoon.woff?h5dgw1') format('woff'),
-    url('../fonts/icomoon.svg?h5dgw1#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?achgp2');
+  src:  url('../fonts/icomoon.eot?achgp2#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?achgp2') format('truetype'),
+    url('../fonts/icomoon.woff?achgp2') format('woff'),
+    url('../fonts/icomoon.svg?achgp2#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -663,5 +665,8 @@
 }
 .icon-twitter:before {
   content: "\ea96";
+}
+.icon-html-five:before {
+  content: "\eae4";
 }
 
