--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,3 +1,15 @@
 $blue: #0674ec;
 $purple: #7347c1;
 $grey: #555555;
+
+@mixin f500 {
+  font-family: 'Quicksand-Medium', sans-serif;
+  font-weight: 500;
+}
+
+@mixin f700 {
+  font-family: 'Quicksand-Bold', sans-serif;
+  font-weight: 700;
+}
+
+
