--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -493,7 +493,7 @@
   transition: all .5s;
   font-family: 'Quicksand-Medium', sans-serif;
   transition: all .5s;
-  
+
   &:hover {
     box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
     transition: all .5s;
@@ -626,7 +626,8 @@
   font-weight: 700;
 }
 
-.products-slider__info {
+.products-slider__info,
+.products__item-info {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -634,17 +635,21 @@
   font-weight: 700;
 }
 
-.products-slider__avatar {
+.products-slider__avatar
+.products__item-avatar {
   border-radius: 50%;
   margin-right: 7px;
 }
 
-.products-slider__name {
+.products-slider__name,
+.products__item-name {
   color: #000;
   margin-right: 25px;
+  margin-left: 9px;
 }
 
-.products-slider__category {
+.products-slider__category,
+.products__item-category {
   position: relative;
   padding-left: 24px;
   color: $purple;
@@ -692,7 +697,8 @@
   }
 }
 
-.products-slider__feedback {
+.products-slider__feedback,
+.products__item-feedback {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -715,7 +721,8 @@
   border-radius: 40px;
 }
 
-.products-slider__likes {
+.products-slider__likes,
+.products__item-likes {
   position: relative;
   font-size: 15px;
   font-weight: 700;
@@ -734,7 +741,8 @@
   }
 }
 
-.products-slider__number {
+.products-slider__number,
+.products__item-number {
   position: relative;
   padding-left: 23px;
   margin-right: 170px;
@@ -756,10 +764,241 @@
 .rate-star .jq-ry-normal-group svg {
   stroke:#ffc000;
   stroke-width: 10;
-
 }
 
 // end products-slider
 
+// start products
+
+.products {
+  background-color: #f6f7fb;
+  padding: 120px 0;
+}
+
+.products__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 111px;
+  padding: 0 17px 0 30px;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  background-color: #fff;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
 
 
+.products__title {
+  color: #000;
+  font-size: 30px;
+  @include f500;
+}
+
+.products__filter {
+  color: #747b86;
+  display: flex;
+  align-items: center;
+}
+
+.products__filter-btn {
+  border: none;
+  border-left: 5px dotted #a3b1c4;
+  background-color: transparent;
+  height: 20px;
+  cursor: pointer;
+  margin-left: 25px;
+  transition: all .5s;
+
+  &:hover {
+    border-color: #333333;
+    transition: all .5s;
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0px 0px 0px 5px rgb(138, 191, 235);
+    transition: all .5s;
+  }
+
+  &:active {
+    border-color: #2351b4;
+    transition: all .5s;
+  }
+}
+
+.products__categories {
+  display: flex;
+  align-items: center;
+  height: 92px;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 0 31px;
+  margin-bottom: 50px;
+
+  li + li {
+    margin-left: 11px;
+  }
+}
+
+.products__categories-item {
+  display: inline-block;
+}
+
+.products__categories-btn {
+  color: #747b86;
+  padding: 11px 20px;
+  background-color: #f3f3f8;
+  border: none;
+  border-radius: 40px;
+  transition: all .5s;
+  cursor: pointer;
+
+  &:hover {
+    color: #fff;
+    background-color: $blue;
+    transition: all .5s;
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0px 0px 0px 5px rgb(138, 191, 235);
+    transition: all .5s;
+  }
+
+  &:active {
+    box-shadow: inset 0px 7px 5px 0px rgba(19, 19, 97, 0.62);
+    transition: all .5s;
+  }
+}
+
+.products {
+  text-align: center;
+}
+
+.products__inner {
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+
+.products__item {
+  margin-bottom:30px;
+}
+
+.products__item-hover {
+  display: none;
+}
+
+.products__item-content {
+  max-width: 361px;
+  width: 100%;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  background-color: #fff;
+}
+
+.products__item-title {
+  color: #000;
+  font-size: 20px;
+  @include f700;
+  margin-bottom: 15px;
+}
+
+.products__item-text {
+  padding: 26px 30px 30px;
+}
+
+.products__item-info {
+  margin-bottom: 24px;
+  align-items: center;
+}
+
+.products__item-name {
+  display: inline-block;
+  letter-spacing: 0.007em;
+}
+
+.products__item-category--psd::before {
+  width: 13px;
+  height: 17px;
+  background-image: url(../images/icons/PSD.svg);
+}
+
+.products__item-category--html{
+  position: relative;
+  &::before {
+    position: absolute;
+    content: '\eae4';
+    background-image: none;
+    font-size: 17px;
+    color: $purple;
+    font-family: 'icomoon';
+  }
+}
+
+.products__item-paragraph {
+  letter-spacing: 0.001em;
+  line-height: 29px;
+}
+
+
+.products__item-feedback {
+  padding: 15px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.products__item-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.products__item-price {
+  text-align: center;
+  background-color: #e6f1fd;
+  color: $blue;
+  @include f700;
+  padding: 8px 17px;
+  border-radius: 30px;
+  margin-right: 12px;
+  margin-left: 30px;
+}
+
+.products__item-number {
+  margin-right: 30px;
+}
+
+.products__btn {
+  display: inline-block;
+  color: #fff;
+  font-size: 16px;
+  background-color: $blue;
+  padding: 22px 33px;
+  border: none;
+  border-radius: 30px;
+  margin-top: 59px;
+  cursor: pointer;
+  margin-bottom: 120px;
+
+  &:hover {
+    background-color: rgb(39, 99, 160);
+    transition: all .5s;
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0px 0px 0px 5px rgb(138, 191, 235);
+    transition: all .5s;
+  }
+
+  &:active {
+    box-shadow: inset 0px 7px 5px 0px rgba(19, 19, 97, 0.62);
+    transition: all .5s;
+  }
+}
+
+
+// end products
