--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1249,8 +1249,7 @@
 .statistics {
   background-color: #212225;
   min-height: 350px;
-  padding-top: 97px;
-  padding-bottom: 92px;
+  padding: 90px 0;
 
   &__inner {
     display: flex;
@@ -1314,6 +1313,136 @@
 
 // start reasons
 
+.reasons {
+  padding: 120px 0;
+
+  &__top {
+    text-align: center;
+    margin-bottom: 59px;
+  }
+
+  &__title {
+    font-size: 36px;
+    color: #000;
+    margin-bottom: 25px;
+  }
+
+  &__title--blue {
+    color: $blue;
+  }
+
+  &__text {
+    max-width: 682px;
+    margin: 0 auto;
+    line-height: 27px;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    position: relative;
+    padding: 58px 28px;
+    max-width: 360px;
+    width: 100%;
+    height: 372px;
+    text-align: center;
+    box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.08);
+    margin-bottom: 30px;
+
+    &::before {
+      content: '01';
+      position: absolute;
+      font-size: 48px;
+      top: 15px;
+      left: 20px;
+      color: rgba(92, 135, 248, 0.2);
+    }
+  }
+
+  &__item--second::before {
+    content: '02';
+  }
+
+  &__item--third::before {
+    content: '03';
+  }
+
+  &__item--fourth::before {
+    content: '04';
+  }
+
+  &__item--fifth::before {
+    content: '05';
+  }
+
+  &__item--sixth::before {
+    content: '06';
+  }
+
+  &__item-title {
+    display: inline-block;
+    position: relative;
+    font-size: 24px;
+    color: #000;
+    padding-top: 104px;
+
+    &::before {
+      content: '\e822';
+      position: absolute;
+      font-family: 'Linearicons-Free';
+      font-size: 60px;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      color: $blue;
+    }
+  }
+
+  &__item-title--quality {
+    &::before {
+      content: '\e803';
+      color: #7f4ec2;
+    }
+  }
+
+  &__item-title--security {
+    &::before {
+      content: '\e80f';
+      color: #77de51;
+    }
+  }
+
+  &__item-title--code {
+    &::before {
+      content: '\e843';
+      color: #feb71d;
+    }
+  }
+
+  &__item-title--update {
+    &::before {
+      content: '\e849';
+      color: #58c9e9;
+    }
+  }
+
+  &__item-title--support {
+    &::before {
+      content: '\e831';
+      color: #ff6a6d;
+    }
+  }
+
+
+  &__item-text {
+    line-height: 27px;
+  }
+}
 
 // end reasons
 
