fixed features-img and added section-start

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,15 +1,15 @@
 @font-face {
-  font-family: 'Quicksand-Regular';
+  font-family: 'Quicksand';
   src: url('../fonts/Quicksand-Regular.woff2') format('woff2'),
        url('../fonts/Quicksand-Regular.woff') format('woff'),
        url('../fonts/Quicksand-Regular.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Quicksand-Medium';
+  font-family: 'Quicksand';
   src: url('../fonts/Quicksand-Medium.woff2') format('woff2'),
        url('../fonts/Quicksand-Medium.woff') format('woff'),
        url('../fonts/Quicksand-Medium.ttf') format('truetype');
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-  font-family: 'Quicksand-Bold';
+  font-family: 'Quicksand';
   src: url('../fonts/Quicksand-Bold.woff2') format('woff2'),
        url('../fonts/Quicksand-Bold.woff') format('woff'),
        url('../fonts/Quicksand-Bold.ttf') format('truetype');
