--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -11,13 +11,15 @@ html {
 a {
   font-size: 16px;
   text-decoration: none;
-  font-family: 'Quicksand-Regular', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
 }
 
 body {
   font-size: 16px;
   color: $grey;
-  font-family: 'Quicksand-Regular', sans-serif;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 400;
 }
 
 .container {
