--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -861,7 +861,7 @@
 
 .products {
   background-color: #f6f7fb;
-  padding: 120px 0;
+  padding: 125px 0;
   text-align: center;
 
   &__top {
@@ -1288,7 +1288,7 @@
     text-align: center;
     position: relative;
     display: block;
-    padding-top: 96px;
+    padding-top: 89px;
     font-size: 36px;
     color: #feb71d;
     margin-bottom: 15px;
@@ -1307,6 +1307,7 @@
 
   &__number--blue {
     color: #58c9e9;
+
     &::before {
       content: '\e80b';
     }
@@ -1337,29 +1338,7 @@
 // start reasons
 
 .reasons {
-  padding: 120px 0 90px;
-
-  &__top {
-    text-align: center;
-    margin-bottom: 59px;
-  }
-
-  &__title {
-    font-size: 36px;
-    color: #000;
-    margin-bottom: 25px;
-    margin-top: 0;
-  }
-
-  &__title--blue {
-    color: $blue;
-  }
-
-  &__text {
-    max-width: 682px;
-    margin: 0 auto;
-    line-height: 27px;
-  }
+  padding: 114px 0 90px;
 
   &__inner {
     display: flex;
@@ -1381,7 +1360,7 @@
       content: '01';
       position: absolute;
       font-size: 48px;
-      top: 15px;
+      top: 11px;
       left: 20px;
       color: rgba(92, 135, 248, 0.2);
     }
@@ -1412,7 +1391,7 @@
     position: relative;
     font-size: 24px;
     color: #000;
-    padding-top: 104px;
+    padding-top: 95px;
 
     &::before {
       content: '\e822';
@@ -1454,6 +1433,34 @@
 
 
   &__item-text {
+    line-height: 29px;
+  }
+}
+
+.section-intro {
+  text-align: center;
+  max-width: 680px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 56px;
+
+  p {
+    margin: 0;
+  }
+
+  &__title {
+    font-size: 36px;
+    line-height: 38px;
+    color: #000;
+    margin-bottom: 14px;
+  }
+
+  &__title--blue {
+    display: inline-block;
+    color: $blue;
+  }
+
+  &__text {
     line-height: 27px;
   }
 }
@@ -1566,7 +1573,7 @@
   &__inner {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 41px;
+    margin-bottom: 62px;
   }
 
   &__item {
@@ -1623,7 +1630,7 @@
   }
 
   &__btn {
-    padding: 20px 40px;
+    padding: 18px 36px;
     display: inline-block;
     color: #fff;
     background-color: $blue;
@@ -1652,6 +1659,7 @@
 // start news
 
 .news {
+  padding-top: 117px;
   padding-bottom: 120px;
   background-color: #eff1f5;
 
@@ -1835,7 +1843,59 @@
 
 // start join
 
+.join {
+  text-align: center;
+  padding: 107px 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(to left, rgb(13,62,242) 0%, rgb(64,48,201) 46%, rgb(114,33,160) 100%);
+  color: #fff;
+
+  &__title {
+    display: inline-block;
+    font-size: 36px;
+    line-height: 38px;
+    margin: 0;
+    margin-bottom: 22px;
+    font-weight: 500;
+  }
+
+  &__text {
+    font-size: 18px;
+    line-height: 20px;
+    margin: 0;
+    margin-bottom: 48px;
+  }
+
+  &__link {
+    display: inline-block;
+    background-color: #fff;
+    color: $blue;
+    padding: 20px 43px;
+    border-radius: 40px;
+    transition: all .5s;
+
+    &:hover {
+      background-color: rgb(52, 42, 189);
+      color: #fff;
+    }
+  
+    &:focus {
+      outline: transparent;
+      box-shadow: 0px 0px 0px 5px rgb(138, 191, 235);
+    }
+  
+    &:active {
+      box-shadow: inset 0px 7px 5px 0px rgba(36, 36, 68, 0.62);
+    }
+  }
+}
 
 // end join
+
+// start footer
+
+
+// end footer
 
 
